adicionando reposividade mobile

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
       <p>AINDA DÁ TEMPO DE GARANTIR O SEU, MAS CORRE!</p>
       <div id="elementos">
         <div id="cards">
-          <img src="midias/card_quinta.svg" width="150px">
-          <img src="midias/card_sexta.svg" width="150px">
-          <img src="midias/card_sabado.svg" width="150px">
-          <img src="midias/card_domingo.svg" width="150px">
+          <img src="midias/card_quinta.svg" width="150px" class="card">
+          <img src="midias/card_sexta.svg" width="150px" class="card">
+          <img src="midias/card_sabado.svg" width="150px"class="card">
+          <img src="midias/card_domingo.svg" width="150px"class="card">
 
         </div>
 
